# dev

./: .envrc  .gitignore  Cargo.toml  README.md  check.sh  dev.yml  flake.nix  lint.sh  shell.nix
.github/workflows/: coverage.yml  rust.yml  scorecard.yml
proptest-regressions/: main.txt
proptest-regressions/command/: mod.txt
src/: lib.rs  main.rs
src/command/: mod.rs
src/err/: mod.rs
src/filesystem/: mod.rs
src/runner/: mod.rs
tests/: subcommand.rs
tests/bad_yaml/: dev.yml
tests/empty_dev/: dev.yml
tests/empty_subprojects/: dev.yml
tests/failing_subproject/: dev.yml
tests/multitask_early_failure/: dev.yml
tests/multitask_subproject/: dev.yml
tests/with_subprojects/: dev.yml
tests/with_subprojects/projA/: dev.yml
tests/wrong_subcommand_structure/: dev.yml
