[package]
name = "dev"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = {version ="1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"

[dev-dependencies]
proptest = "1.7.0"
proptest-derive = "0.6.0"
