[package]
name = "dev"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
serde = {version ="1.0.228", features = ["derive"] }
serde-saphyr = "0.0.21"
thiserror = "2.0.18"

[dev-dependencies]
proptest = "1.10.0"
proptest-derive = "0.6.0"
